fix: corrigir not null
